[gd_scene load_steps=5 format=3 uid="uid://nn2642qqpucs"]

[ext_resource type="Script" uid="uid://cufbkw4mivrpn" path="res://Arquivos/Scripts/main_menu.gd" id="1_ojik8"]
[ext_resource type="Theme" uid="uid://ms6f7fbklijr" path="res://Arquivos/Assets/Themes/MyTheme.tres" id="1_tehdd"]
[ext_resource type="AudioStream" uid="uid://bqj8uxh1glcvx" path="res://Arquivos/Assets/Audio/Main Menu Theme.mp3" id="2_dntwi"]
[ext_resource type="Texture2D" uid="uid://m2pqdspmywko" path="res://Arquivos/Assets/Sprites/Menu/star_background.jpg" id="2_ojik8"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_ojik8")

[node name="MusicMainMenu" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_dntwi")
autoplay = true

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -209.0
offset_top = -181.0
offset_right = 687.02
offset_bottom = 451.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_ojik8")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Spacer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_tehdd")
theme_override_font_sizes/font_size = 110
text = "Lina's Dream"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Spacer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="Button_start" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
custom_minimum_size = Vector2(20, 73)
layout_mode = 2
focus_neighbor_top = NodePath("../Button_quit")
theme = ExtResource("1_tehdd")
text = "Start"

[node name="Button_settings" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
custom_minimum_size = Vector2(20, 73)
layout_mode = 2
theme = ExtResource("1_tehdd")
theme_override_font_sizes/font_size = 50
text = "Settings"

[node name="Button_quit" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
custom_minimum_size = Vector2(20, 73)
layout_mode = 2
focus_neighbor_bottom = NodePath("../Button_start")
theme = ExtResource("1_tehdd")
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="Spacer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
custom_minimum_size = Vector2(10, 40)
layout_mode = 2

[node name="Spacer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/Button_start" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/Button_settings" to="." method="_on_button_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/Button_quit" to="." method="_on_button_quit_pressed"]
